--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ fastapi = { extras = ["standard"], version = "^0.115.8" }
 sqlalchemy = "^2.0.38"
 pydantic-settings = "^2.7.1"
 alembic = "^1.14.1"
+pyjwt = "^2.10.1"
+tzdata = "^2025.1"
+pwdlib = {extras = ["argon2"], version = "^0.2.1"}
 
 
 [tool.poetry.group.dev.dependencies]
