--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,8 @@ pytest = "^8.3.4"
 pytest-cov = "^6.0.0"
 taskipy = "^1.14.1"
 ruff = "^0.9.6"
+factory-boy = "^3.3.3"
+freezegun = "^1.5.1"
 
 [build-system]
 requires = ["poetry-core"]
