Fixing the run task command.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ addopts = '-p no:warnings'
 lint = 'ruff check'
 pre_format = 'ruff check --fix'
 format = 'ruff format'
-run = 'fastpi dev madr_api/app.py'
+run = 'fastapi dev madr_api/app.py'
 pre_test = 'task lint'
 test = 'pytest -s -x --cov=madr_api -vv'
 post_test = 'coverage html'
